--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ go:
   - 1.11.x
 
 script:
-  - go test
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
